One more commit

--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="просто Блог, LITS">
     <meta name="description" content="Простейший Блог для простых людей.">
     <!--<link rel="stylesheet" href="">-->
+    <!-- GIT Test-->
   </head>
   <body>
     <header class="page-header">
@@ -19,7 +20,7 @@
         </ul>
       </nav>
     </header>
-    <section> <!--May I use <main> here?-->
+    <section> <!--Can I use the <main> here?-->
       <h1 class="section">Blog</h1>
       <article class="articles">
         <h2>Article title</h2>
