--- a/blog.html
+++ b/blog.html
@@ -5,87 +5,89 @@
     <title>Simple Blog</title>
     <meta name="keywords" content="просто Блог, LITS">
     <meta name="description" content="Простейший Блог для простых людей.">
-    <!--<link rel="stylesheet" href="">-->
-    <!-- GIT Test-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <header class="page-header">
-      <div class="logo">Logo</div>
-      <nav>
-        <ul>
-          <li><a href="#">About me</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contacts</a></li>
-        </ul>
-      </nav>
+    <header class="page_header">
+      <div class="menu_header">
+        <img src="./img/logo_new.png" alt="Logo"/>
+        <nav class="main_navigation">
+          <ul class="menu">
+            <li><a href="#">About me</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contacts</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
-    <section> <!--Can I use the <main> here?-->
-      <h1 class="section">Blog</h1>
-      <article class="articles">
-        <h2>Article title</h2>
-        <h3>Article subtitle</h3>
-        <img src="./img/robert.png">Robert Langdon</img>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-      </article>
-      <article class="articles">
-        <h2>Article title</h2>
-        <h3>Article subtitle</h3>
-        <img src="./img/robert.png">Robert Langdon</img>
-        <ol>
-          <li>List item</li>
-          <li>List item</li>
-          <li>List item</li>
-          <li>List item</li>
-        </ol>
-        <div class="readmore">
-          <a src="#">Read more</a>
-        </div>
-      </article>
-      <article class="articles">
-        <h2>Article title</h2>
-        <h3>Article subtitle</h3>
-        <img src="./img/robert.png">Robert Langdon</img>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-      </article>
-    </section>
-    <aside>
-      <h3 class="aside">Categories</h3>
-      <table>
-        <tbody>
-          <tr>
-            <td><a href="#">Category name</a></td>
-            <td>85</td>
-          </tr>
-          <tr>
-            <td><a href="#">Category name</a></td>
-            <td>85</td>
-          </tr>
-          <tr>
-            <td><a href="#">Category name</a></td>
-            <td>85</td>
-          </tr>
-          <tr>
-            <td><a href="#">Category name</a></td>
-            <td>85</td>
-          </tr>
-          <tr>
-            <td><a href="#">Category name</a></td>
-            <td>85</td>
-          </tr>
-          <tr>
-            <td><a href="#">Category name</a></td>
-            <td>85</td>
-          </tr>
-        </tbody>
-      </table>
-    </aside>
-    <footer class="page-footer">
-      Copyright 2016
+    <main class="main">
+      <h1>Blog</h1>
+      <aside class="aside">
+        <h3 class="categories">Categories</h3>
+        <ul>
+          <li><a href="#">Category name</a><span>85</span></li>
+          <li><a href="#">Category name</a><span>85</span></li>
+          <li><a href="#">Category name</a><span>85</span></li>
+          <li><a href="#">Category name</a><span>85</span></li>
+        </ul>
+      </aside>
+      <section class="blog_section">
+        <article class="articles">
+          <header>
+            <div class="art_header">
+              <h2><a href="#">Article title</a></h2>
+              <h3>Article subtitle</h3>
+            </div>
+            <div class="avatar">
+              <img src="./img/robert.png"><a href="#">Robert Langdon</a></img>
+            </div>
+          </header>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </article>
+        <article class="articles">
+          <header>
+            <div class="art_header">
+              <h2><a href="#">Article title</a></h2>
+              <h3>Article subtitle</h3>
+            </div>
+            <div class="avatar">
+              <img src="./img/robert.png"><a href="#">Robert Langdon</a></img>
+            </div>
+          </header>
+          <ol>
+            <li>List item</li>
+            <li>List item</li>
+            <li>List item</li>
+            <li>List item</li>
+          </ol>
+          <div class="readmore">
+            <a href="#">Read more</a>
+          </div>
+        </article>
+        <article class="articles">
+          <header>
+            <div class="art_header">
+              <h2><a href="#">Article title</a></h2>
+              <h3>Article subtitle</h3>
+            </div>
+            <div class="avatar">
+              <img src="./img/robert.png"><a href="#">Robert Langdon</a></img>
+            </div>
+          </header>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </article>
+      </section>
+    </main>
+    <footer class="page_footer">
+      <div class="copyright">
+          <span>Copyright 2016</span>
+      </div>
     </footer>
     <!--<script src=""></script>-->
   </body>
