--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
         <img src="./img/logo_new.png" alt="Logo"/>
         <nav class="main_navigation">
           <ul class="menu">
-            <li><a href="#">About me</a></li>
+            <li><a href="./lp/index.html">About me</a></li>
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Contacts</a></li>
