--- a/landing/landing.html
+++ b/landing/landing.html
@@ -1,186 +1,199 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet"> -->
-  <link rel="stylesheet" href="./css/lpstyle.css">
-  <title>The new modern design</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet"> -->
+    <link rel="stylesheet" href="./css/lpstyle.css">
+    <title>The new modern design</title>
 </head>
 <body>
-  <header class="header to-center">
+    <header class="header background-grey">
     <!-- The main structure! -->
-    <div class="wrapper clearfix">
-      <div class="logo to-left">
-        <a href="#home">Design</a>
-      </div>
-      <nav class="home-nav to-right">
-        <ul class="to-right color-grey">
-          <li>
-            <a href="#home">Home</a>
-          </li>
-          <li>
-            <a href="#features">Features</a>
-          </li>
-          <li>
-          <a href="#services">Service</a>
-          </li>
-          <li>
-            <a href="#about">About us</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-  <section id="home">
-    <header>
-      <div class="wrapper">
-        <span class="the color-white">New</span>
-        <div class="row color-white">
-          <span class="highlited">Fullscreen</span>
+        <div class="container clearfix">
+            <div class="mob col-xs-3 color-red">
+                <a href="#">
+                    <i class="material-icons">menu</i>
+                </a>
+            </div>
+            <nav id="mob-nav" class="mob-nav col-xs-4 text-center background-grey">
+                <a href="#home" class="clearfix">Home</a>
+                <a href="#features" class="clearfix">Features</a>
+                <a href="#services" class="clearfix">Service</a>
+                <a href="#about" class="clearfix">About us</a>
+            </nav>
+            <div class="logo col-xs-9 col-sm-3 color-red">
+                <a href="#home">Design</a>
+            </div>
+            <nav class="home-nav col-sm-9 text-right color-grey">
+                <a href="#home">Home</a>
+                <a href="#features">Features</a>
+                <a href="#services">Service</a>
+                <a href="#about">About us</a>
+            </nav>
         </div>
-        <div class="row color-grey">
-          <span class="highlited2">Modern design</span>
-        </div>
-      </div>
     </header>
-  </section>
-  <section id="features" class="to-center color-white clearfix">
-    <article class="material col-3">
-      <div class="feature">
-        <i class="material-icons">grade</i>
-        <h2>Material design</h2>
-        <p>is a design language that combines the classic principles of successful design along with innovation and technology</p>
-      </div>
-    </article>
-    <article class="metaphor col-3">
-      <div class="feature">
-        <i class="material-icons">settings</i>
-        <h2>Metaphor</h2>
-        <p>The metaphor of material defines the relationship between space and motion. The idea is that the technology is inspired...</p>
-      </div>
-    </article>
-    <article class="intentional col-3">
-      <div class="feature">
-        <i class="material-icons">visibility</i>
-        <h2>Intentional</h2>
-        <p>Elements and components such as grids, typography, color, and imagery are not only visually pleasing, but also create a sense...</p>
-      </div>
-    </article>
-    <article class="motion col-3">
-      <div class="feature">
-        <i class="material-icons">room</i>
-        <h2>Motion</h2>
-        <p>Motion allows the user to draw a parallel between what they see on the screen and in real life. By providing both feedback...</p>
-      </div>
-    </article>
-  </section>
-  <section id="services" class="wrapper color-grey clearfix">
-    <header class="text-center">
-      <h1 class="color-turquoise">Our Services</h1>
-      <h3>What we offer to our Customers. Brief list.</h3>
-    </header>
-    <article class="service col-4">
-      <i class="material-icons color-turquoise service-icon to-left">language</i>
-      <div class="serv-content to-right">
-        <h2>Hi-end Design</h2>
-        <p>Curabitur eu nulla eget ligula laoreet auctor. Integer eu ultricies justo. Integer tortor nunc, tempor rutrum elementum vel, porttitor ac leo.</p>
-        <i class="material-icons color-turquoise">trending_flat</i>
-        <a class="learn-more color-grey" href="#">Learn more</a>
-      </div>
-    </article>
-    <article class="service col-4">
-      <i class="material-icons color-turquoise service-icon to-left">track_changes</i>
-      <div class="serv-content to-right">
-        <h2>Implementation</h2>
-        <p>Curabitur eu nulla eget ligula laoreet auctor. Integer eu ultricies justo. Integer tortor nunc, tempor rutrum elementum vel, porttitor ac leo.</p>
-        <i class="material-icons color-turquoise">trending_flat</i>
-        <a class="learn-more color-grey" href="#">Learn more</a>
-      </div>
-    </article>
-    <article class="service col-4">
-      <i class="material-icons color-turquoise service-icon to-left">chat_bubble_outline</i>
-      <div class="serv-content to-right">
-        <h2>Support</h2>
-        <p>Curabitur eu nulla eget ligula laoreet auctor. Integer eu ultricies justo. Integer tortor nunc, tempor rutrum elementum vel, porttitor ac leo.</p>
-        <i class="material-icons color-turquoise">trending_flat</i>
-        <a class="learn-more color-grey" href="#">Learn more</a>
-      </div>
-    </article>
-    <article class="service col-4">
-      <i class="material-icons color-turquoise service-icon to-left">schedule</i>
-      <div class="serv-content to-right">
-        <h2>Compatibility</h2>
-        <p>Curabitur eu nulla eget ligula laoreet auctor. Integer eu ultricies justo. Integer tortor nunc, tempor rutrum elementum vel, porttitor ac leo.</p>
-        <i class="material-icons color-turquoise">trending_flat</i>
-        <a class="learn-more color-grey" href="#">Learn more</a>
-      </div>
-    </article>
-    <article class="service col-4">
-      <i class="material-icons color-turquoise service-icon to-left">lock_outline</i>
-      <div class="serv-content to-right">
-        <h2>Safety</h2>
-        <p>Curabitur eu nulla eget ligula laoreet auctor. Integer eu ultricies justo. Integer tortor nunc, tempor rutrum elementum vel, porttitor ac leo.</p>
-        <i class="material-icons color-turquoise">trending_flat</i>
-        <a class="learn-more color-grey" href="#">Learn more</a>
-      </div>
-    </article>
-    <article class="service col-4">
-      <i class="material-icons color-turquoise service-icon to-left">repeat</i>
-      <div class="serv-content to-right">
-        <h2>Violatility</h2>
-        <p>Curabitur eu nulla eget ligula laoreet auctor. Integer eu ultricies justo. Integer tortor nunc, tempor rutrum elementum vel, porttitor ac leo.</p>
-        <i class="material-icons color-turquoise">trending_flat</i>
-        <a class="learn-more color-grey" href="#">Learn more</a>
-      </div>
-    </article>
-  </section>
-  <section id="about" class="to-center">
-    <header class="text-center color-white wrapper">
-      <h1>Contact Us</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-    </header>
-    <article class="wrapper clearfix">
-      <div class="map to-left">
-        <iframe src="https://api-maps.yandex.ua/frame/v1/-/CZsXFZL7" width=100% height="400" frameborder="0"></iframe>
+    <section id="home">
+        <header>
+            <div class="container">
+                <span class="label color-white">New</span>
+                <div class="row color-white">
+                    <span class="highlited">Fullscreen</span>
+                </div>
+                <div class="row color-grey">
+                    <span class="highlited2">Modern design</span>
+                </div>
+            </div>
+        </header>
+    </section>
+    <section id="features" class="color-white clearfix">
+        <article class="bg-color-crimson col-xs-12 col-sm-6 col-md-3">
+            <div class="feature">
+                <i class="material-icons">grade</i>
+                <h2>Material design</h2>
+                <p>is a design language that combines the classic principles of successful design along with innovation and technology</p>
+            </div>
+        </article>
+        <article class="bg-color-purple col-xs-12 col-sm-6 col-md-3">
+            <div class="feature">
+                <i class="material-icons">settings</i>
+                <h2>Metaphor</h2>
+                <p>The metaphor of material defines the relationship between space and motion. The idea is that the technology is inspired...</p>
+            </div>
+        </article>
+        <article class="bg-color-red col-xs-12 col-sm-6 col-md-3">
+            <div class="feature">
+                <i class="material-icons">visibility</i>
+                <h2>Intentional</h2>
+                <p>Elements and components such as grids, typography, color, and imagery are not only visually pleasing, but also create a sense...</p>
+            </div>
+        </article>
+        <article class="bg-color-orange col-xs-12 col-sm-6 col-md-3">
+            <div class="feature">
+                <i class="material-icons">room</i>
+                <h2>Motion</h2>
+                <p>Motion allows the user to draw a parallel between what they see on the screen and in real life. By providing both feedback...</p>
+              </div>
+        </article>
+    </section>
+    <section id="services" class="container color-grey clearfix">
+        <header class="text-center">
+            <h1 class="color-turquoise">Our Services</h1>
+            <h3>What we offer to our Customers. Brief list.</h3>
+        </header>
+        <article class="service col-xs-12 col-sm-6 col-md-4">
+            <i class="material-icons color-turquoise service-icon to-left">language</i>
+            <div class="serv-content to-right">
+                <h2>Hi-end Design</h2>
+                <p>Curabitur eu nulla eget ligula laoreet auctor. Integer eu ultricies justo. Integer tortor nunc, tempor rutrum elementum vel, porttitor ac leo.</p>
+                <i class="material-icons color-turquoise">trending_flat</i>
+                <a class="learn-more color-grey" href="#">Learn more</a>
+            </div>
+        </article>
+        <article class="service col-xs-12 col-sm-6 col-md-4">
+            <i class="material-icons color-turquoise service-icon to-left">track_changes</i>
+            <div class="serv-content to-right">
+                <h2>Implementation</h2>
+                <p>Curabitur eu nulla eget ligula laoreet auctor. Integer eu ultricies justo. Integer tortor nunc, tempor rutrum elementum vel, porttitor ac leo.</p>
+                <i class="material-icons color-turquoise">trending_flat</i>
+                <a class="learn-more color-grey" href="#">Learn more</a>
+            </div>
+        </article>
+        <article class="service col-xs-12 col-sm-6 col-md-4">
+            <i class="material-icons color-turquoise service-icon to-left">chat_bubble_outline</i>
+            <div class="serv-content to-right">
+                <h2>Support</h2>
+                <p>Curabitur eu nulla eget ligula laoreet auctor. Integer eu ultricies justo. Integer tortor nunc, tempor rutrum elementum vel, porttitor ac leo.</p>
+                <i class="material-icons color-turquoise">trending_flat</i>
+                <a class="learn-more color-grey" href="#">Learn more</a>
+            </div>
+        </article>
+        <article class="service col-xs-12 col-sm-6 col-md-4">
+            <i class="material-icons color-turquoise service-icon to-left">schedule</i>
+            <div class="serv-content to-right">
+                <h2>Compatibility</h2>
+                <p>Curabitur eu nulla eget ligula laoreet auctor. Integer eu ultricies justo. Integer tortor nunc, tempor rutrum elementum vel, porttitor ac leo.</p>
+                <i class="material-icons color-turquoise">trending_flat</i>
+                <a class="learn-more color-grey" href="#">Learn more</a>
+            </div>
+        </article>
+        <article class="service col-xs-12 col-sm-6 col-md-4">
+            <i class="material-icons color-turquoise service-icon to-left">lock_outline</i>
+            <div class="serv-content to-right">
+                <h2>Safety</h2>
+                <p>Curabitur eu nulla eget ligula laoreet auctor. Integer eu ultricies justo. Integer tortor nunc, tempor rutrum elementum vel, porttitor ac leo.</p>
+                <i class="material-icons color-turquoise">trending_flat</i>
+                <a class="learn-more color-grey" href="#">Learn more</a>
+            </div>
+        </article>
+        <article class="service col-xs-12 col-sm-6 col-md-4">
+            <i class="material-icons color-turquoise service-icon to-left">repeat</i>
+            <div class="serv-content to-right">
+                <h2>Violatility</h2>
+                <p>Curabitur eu nulla eget ligula laoreet auctor. Integer eu ultricies justo. Integer tortor nunc, tempor rutrum elementum vel, porttitor ac leo.</p>
+                <i class="material-icons color-turquoise">trending_flat</i>
+                <a class="learn-more color-grey" href="#">Learn more</a>
+            </div>
+        </article>
+    </section>
+    <section id="about">
+        <header class="container text-center color-white">
+            <h1>Contact Us</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+        </header>
+        <article class="container clearfix">
+            <div class="map col-xs-12 col-md-6">
+                <iframe src="https://api-maps.yandex.ua/frame/v1/-/CZsXFZL7" width=100% height="400" frameborder="0"></iframe>
         <!-- <p>The map</p> -->
-      </div>
-      <form class="feedback to-right">
-        <!-- <fieldset> -->
-        <div class="row">
-          <div class="firstname input-field to-left">
-            <input id="first_name" type="text">
-            <label for="first_name" class>First Name</label>
-          </div>
-          <div class="lastname input-field to-right">
-            <input id="last_name" type="text">
-            <label for="last_name" class>Last Name</label>
-          </div>
-        </div>
-        <div class="row input-field">
-          <input id="email" type="text">
-          <label for="email" class>Email</label>
-        </div>
-        <div class="row input-field">
-          <input id="subject" type="text">
-          <label for="subject" class>Subject</label>
-        </div>
-        <div class="row input-field">
-          <input id="textarea" type="text">
-          <label for="textarea" class>Message text</label>
-        </div>
-        <div class="row">
-          <button class="btn btn-lg btn-primary" type="submit" name="name" value="Send">SUBMIT</button>
-        </div>
-        <!-- </fieldset> -->
-      </form>
-    </article>
-  </section>
-  <footer class="footer wrapper">
-    <p>Made by Me</p>
-  </footer>
+            </div>
+            <form class="feedback col-xs-12 col-md-6">
+            <!-- <fieldset> -->
+                <div class="row">
+                    <div class="firstname input-field col-xs-6">
+                        <input id="first_name" type="text">
+                        <label for="first_name" class>First Name</label>
+                    </div>
+                    <div class="lastname input-field col-xs-6">
+                        <input id="last_name" type="text">
+                        <label for="last_name" class>Last Name</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="email input-field col-xs-12">
+                        <input id="email" type="text">
+                        <label for="email" class>Email</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="subject input-field col-xs-6">
+                        <input id="subject" type="text" length="10">
+                        <label for="subject" class>Subject</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="textarea input-field col-xs-12">
+                        <input id="textarea" type="text">
+                        <label for="textarea" class>Message text</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <button class="btn btn-lg btn-primary" type="submit" name="name" value="Send">SUBMIT</button>
+                </div>
+            <!-- </fieldset> -->
+            </form>
+        </article>
+    </section>
+    <footer class="footer">
+        <p class="container color-white">Copyright 2016</p>
+    </footer>
+    <script>
+        addEventListener("click", function(event) {
+            if (event.target.textContent == "menu")
+                 document.getElementById('mob-nav').classList.toggle('show');
+         })
+    </script>
 </body>
 </html>
