--- a/landing/landing.html
+++ b/landing/landing.html
@@ -8,10 +8,11 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="./css/lpstyle.css">
+    <!-- <link rel="stylesheet" href="./style/css/style.css"> -->
     <title>The new modern design</title>
 </head>
 <body>
-    <header class="header background-grey">
+    <header class="header bg-color-grey">
     <!-- The main structure! -->
         <div class="container clearfix">
             <div class="mob col-xs-3 color-red">
@@ -19,7 +20,7 @@
                     <i class="material-icons">menu</i>
                 </a>
             </div>
-            <nav id="mob-nav" class="mob-nav col-xs-4 text-center background-grey">
+            <nav id="mob-nav" class="mob-nav col-xs-4 text-center bg-color-grey">
                 <a href="#home" class="clearfix">Home</a>
                 <a href="#features" class="clearfix">Features</a>
                 <a href="#services" class="clearfix">Service</a>
@@ -153,30 +154,30 @@
             <!-- <fieldset> -->
                 <div class="row">
                     <div class="firstname input-field col-xs-6">
-                        <input id="first_name" type="text">
-                        <label for="first_name" class>First Name</label>
+                        <input id="first_name" type="text" placeholder="First Name">
+                        <!-- <label for="first_name" class>First Name</label> -->
                     </div>
                     <div class="lastname input-field col-xs-6">
-                        <input id="last_name" type="text">
-                        <label for="last_name" class>Last Name</label>
+                        <input id="last_name" type="text" placeholder="Last Name">
+                        <!-- <label for="last_name" class>Last Name</label> -->
                     </div>
                 </div>
                 <div class="row">
                     <div class="email input-field col-xs-12">
-                        <input id="email" type="text">
-                        <label for="email" class>Email</label>
+                        <input id="email" type="text" placeholder="Email">
+                        <!-- <label for="email" class>Email</label> -->
                     </div>
                 </div>
                 <div class="row">
                     <div class="subject input-field col-xs-6">
-                        <input id="subject" type="text" length="10">
-                        <label for="subject" class>Subject</label>
+                        <input id="subject" type="text" length="10" placeholder="Subject">
+                        <!-- <label for="subject" class>Subject</label> -->
                     </div>
                 </div>
                 <div class="row">
                     <div class="textarea input-field col-xs-12">
-                        <input id="textarea" type="text">
-                        <label for="textarea" class>Message text</label>
+                        <input id="textarea" type="text" placeholder="Message text">
+                        <!-- <label for="textarea" class>Message text</label> -->
                     </div>
                 </div>
                 <div class="row">
