--- a/landing/landing.html
+++ b/landing/landing.html
@@ -7,8 +7,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="./css/lpstyle.css">
-    <!-- <link rel="stylesheet" href="./style/css/style.css"> -->
+    <!-- <link rel="stylesheet" href="./css/lpstyle.css"> -->
+    <link rel="stylesheet" href="./style/css/style.css">
     <title>The new modern design</title>
 </head>
 <body>
