--- a/landing/landing.html
+++ b/landing/landing.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet"> -->
     <!-- <link rel="stylesheet" href="./css/lpstyle.css"> -->
+    <!-- SASS style -->
     <link rel="stylesheet" href="./style/css/style.css">
     <title>The new modern design</title>
 </head>
